# Secure-OTA-with-Digital-Twin-Based-Pre-Deployment-Validation

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  OTA_Major Debug.launch  OTA_Major.ioc  README.md  STM32F446RETX_FLASH.ld  build.bat  flash.bat  toolchain-arm-none-eabi.cmake
Core/Inc/: boot_metadata.h  bootloader.h  image_validate.h  jump.h  main.h  memory_map.h  stm32f4xx_hal_conf.h
Core/Src/: boot_metadata.c  bootloader.c  crc_check.c  image_validate.c  jump.c  main.c  stm32f4xx_hal_msp.c
Debug/: OTA_Major.elf  OTA_Major.list  OTA_Major.map  makefile  objects.list
Debug/Core/Src/: boot_metadata.cyclo  boot_metadata.d  boot_metadata.su  bootloader.d  crc_check.cyclo  crc_check.d  crc_check.su  image_validate.cyclo  image_validate.d  image_validate.su  jump.cyclo  jump.d  jump.su  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_crc.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_uart.d  stm32f4xx_hal_wwdg.d  subdir.mk
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_dma.h  stm32f4xx_hal_rcc_ex.h
LinkerScripts/: LinkerScript_app_slotA.ld  LinkerScript_app_slotB.ld  LinkerScript_bootloader.ld
